# OpenClassrooms_P2

./: P2_vf.ipynb  p2.ipynb  projet2.ipynb  pyproject.toml
