[project]
name = "projet2"
version = "0.1.0"
description = ""
authors = [
    {name = "Artur Agababyan",email = "artur.agababyan04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "zcore (>=0.0.4,<0.0.5)",
    "scipy (>=1.16.1,<2.0.0)",
    "pca (>=2.10.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

